--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ clap-num = "1.0"
 tokio = { version = "1.40", features = ["full"] }
 async-trait = "0.1"
 
-# Network (for future PCAP support)
-# pcap = "1.1"  # TODO: Enable when implementing PCAP support
+# Network - PCAP support
+pcap = "1.1"
 
 # Protocol parsing
 pnet = "0.35"
